--- a/src/views/flashcard.ejs
+++ b/src/views/flashcard.ejs
@@ -32,7 +32,7 @@
 
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
+                <a href="/" class="nav__logo">
                     <img src="/img/infinity.png" class="nav__logo-img"> 
                     <span class="logo-header_text">infinity</span>
                 </a>
@@ -40,18 +40,18 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="/translate" class="nav__link active-link">Translate</a>
+                            <a href="/translate" class="nav__link">Translate</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#trick" class="nav__link">flashcard</a>
+                            <a href="/flashcard" class="nav__link active-link">flashcard</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#new" class="nav__link">Docs</a>
+                            <a href="#docs" class="nav__link unused">Docs</a>
                         </li>
                         
-                        <a href="#support" class="nav__link">Support</a>
+                        <a href="#support" class="nav__link unused">Support</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
@@ -69,6 +69,7 @@
                         <div class="circle">
                             <img src="/img/Animepic3.jpg" alt="Your Image">
                         </div>
+                        <div class="userid" style="display: none;"><%= user.ID %></div>
                     <%} else{%>
                         <a href="/login">
                             <div class="nav__login">
@@ -77,6 +78,14 @@
                         </a>
                     <%} %>
                 </div>
+                <%if (status == 'LoggedIn'){ %>
+                    <div class="vertical-menu">
+                        <a href="/logout">Log out</a>
+                        <!-- <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                        <a href="#">Link 4</a> -->
+                    </div>
+                <%} %>
             </nav>
         </header>
 
@@ -116,6 +125,11 @@
                 </div>
                 <div class="popup_content">
                     <h1 style="font-size: 30px; text-align: center;">Tạo học phần mới</h1>
+                    <div class="warningLength">
+                        <i class="fa-solid fa-triangle-exclamation" style="color: red;">
+                            <span class="warningText">Over limit 100 character</span>
+                        </i>
+                    </div>
                     <div class="termName">
                         <h3 class="termTitle">Tiêu đề</h3>
                         <input type="text" class ="termInput" id="tI" autocomplete="off" placeholder="Nhập tên học phần" required>
@@ -158,16 +172,14 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="flip-card_content">
-                            Divulge
+                            Don't know how to use?
                         </div>
                     </div>
                     <div class="flip-card-back">
-                        v. To tell; to reveal (as a secret)
+                            <img src="/img/howToUse.png" alt="">
                     </div>
                 </div>
             </div>
-
-        <div class="spacing-line"></div>
         <div class="flashcard_list">
             <h1>Học phần đã tạo:</h1>
             <div class="term_container">
