--- a/src/public/css/flashcard.css
+++ b/src/public/css/flashcard.css
@@ -94,7 +94,7 @@ body{
 
 /* ================ My self =============================== */
 :root{
-  --margin-content: 120px;
+  --margin-content: 150px;
 }
 
 /* =============== ANIMATION ========================= */
@@ -140,6 +140,36 @@ body{
     height: 100%;
     cursor: pointer;
     object-fit: cover; /* Fit hình ảnh toàn bộ vào div */
+}
+/* ====================== AVATAR MENU ================== */
+.vertical-menu {
+  display: none;
+  width: 200px;
+  position: fixed;
+  box-shadow: 0 0.75rem 1.5rem 0 #282e3e14;
+}
+
+.vertical-menu a {
+  background-color: #F6F7FB;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+.vertical-menu a:first-child {
+  border-radius: 10px 10px 0 0;
+}
+.vertical-menu a:last-child {
+  border-radius: 0 0 10px 10px;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.vertical-menu a.active {
+  background-color: #0056b3;
+  color: white;
 }
 
 .container{
@@ -188,7 +218,9 @@ body{
     margin-left: 150px;
     color: #3c87c9;
 }
-
+.unused{
+  color: rgb(165, 164, 164) !important;
+}
 @media screen and (max-width: 767px){
     .nav__menu{
         position: fixed;
@@ -206,7 +238,34 @@ body{
     .logo-header_text{
         display: none;
     }
-
+    .popup_add{
+      width: 350px !important;
+      height: 75vh !important;
+    }
+}
+@media screen and (max-width: 576px){
+  .popup_add{
+    width: 270px !important;
+    height: 75vh !important;
+  }
+  .popup_content-sticky h2{
+    font-size: 1em;
+  }
+  .popup_content h1{
+    font-size: 25px !important;
+  }
+}
+@media screen and (max-width: 320px){
+  .popup_add{
+    width: 80vw !important;
+    height: 75vh !important;
+  }
+  .popup_content-sticky h2{
+    font-size: 1em;
+  }
+  .popup_content h1{
+    font-size: 25px !important;
+  }
 }
 .nav__img{
     width: 100px;
@@ -339,7 +398,6 @@ body{
     margin-left: auto;
     margin-right: auto;
   }
-
 }
 @media screen and (min-width: 1200px){
   .home__img{
@@ -414,6 +472,7 @@ body{
   color: black;
 }
 .flashcard_list h1{
+  display: none;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -461,7 +520,10 @@ body{
   color: red;
 }
 .flashcard_boxTitle h2{
+  height: 40px;
+  overflow: auto;
   text-transform: capitalize;
+  word-break: break-all;
 }
 .termNum{
   color: #2e3856;
@@ -572,12 +634,11 @@ body{
   position: fixed;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   z-index: 3;
-  width: 500px;
+  width: 400px;
   border-radius: 10px;
-  height: 700px;
+  height: 80vh;
   background-color: #F6F7FB;
 }
 
@@ -612,8 +673,17 @@ body{
 .termName.active {
   border-bottom: 3px solid black;
 }
-
-
+.warningLength{
+  display: none;
+  margin: 10px 10px;
+  padding: 2px;
+}
+.warningText{
+  margin-left: 2px;
+}
+/* .warningLength p{
+  margin: 0 2px;
+} */
 .termDef{
   width: 100%;
   border-radius: 10px;
@@ -744,7 +814,9 @@ body{
     height: 100%;
     transition: transform 0.3s;
     transform-style: preserve-3d;
+    border-radius: 50px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    
 }
 
 /* .flip-card:active .flip-card-inner {
@@ -763,8 +835,22 @@ body{
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    overflow: auto;
 }
-
+.flip-card_content{
+  width: 80%;
+  height: 80%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+.flip-card-back img{
+  width: 100%;
+  height: 100%;
+}
 .flip-card-front {
     background-color: #ffffff;
     color: black;
@@ -775,9 +861,19 @@ body{
     color: black;
     transform: rotateX(180deg);
 }
-
-
-
+.activeControllerFront, .activeControllerBack{
+  position: absolute;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  column-gap: 5px;
+  font-size: 25px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  opacity: 0.8;
+  background-color: #5d6df9;
+}
 /* ===================== SCROLL BAR ========================= */
 ::-webkit-scrollbar{
     width: 0.6rem;
