--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -168,6 +168,9 @@ button{
   transition: 1s;
 }
 
+.unused{
+  color: gray !important;
+}
 
 /*=============== LAYOUT ===============*/
 .container{
@@ -184,6 +187,7 @@ button{
 .circle {
   width: 50px;
   height: 50px;
+  cursor: url(../stuff/pointer.svg), auto;
   background-color: #f00; /* Màu nền */
   border-radius: 50%; /* Đảm bảo nó là một hình tròn */
   overflow: hidden; /* Ẩn nội dung vượt ra ngoài */
@@ -191,13 +195,41 @@ button{
   justify-content: center; /* Canh giữa theo chiều ngang */
   align-items: center; /* Canh giữa theo chiều dọc */
 }
-
 .circle img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Fit hình ảnh toàn bộ vào div */
 }
+/* ====================== AVATAR MENU ================== */
+.vertical-menu {
+  display: none;
+  width: 200px;
+  position: fixed;
+  box-shadow: 0 0.75rem 1.5rem 0 #282e3e14;
+}
 
+.vertical-menu a {
+  background-color: #F6F7FB;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+.vertical-menu a:first-child {
+  border-radius: 10px 10px 0 0;
+}
+.vertical-menu a:last-child {
+  border-radius: 0 0 10px 10px;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.vertical-menu a.active {
+  background-color: #0056b3;
+  color: white;
+}
 /* =============== VIDEO ================= */
 .image-video{
   object-fit: cover;
@@ -1122,6 +1154,10 @@ video{
   }
   .footer-bar{
     padding: 64px 0;
+  }
+  .circle{
+    width: 40px;
+    height: 40px;
   }
 }
 
