--- a/src/views/home_main.ejs
+++ b/src/views/home_main.ejs
@@ -47,14 +47,14 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#trick" class="nav__link">flashcard</a>
+                            <a href="/flashcard" class="nav__link">flashcard</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#new" class="nav__link">Docs</a>
+                            <a href="#docs" class="nav__link unused">Docs</a>
                         </li>
                         
-                        <a href="#support" class="nav__link">Support</a>
+                        <a href="#support" class="nav__link unused">Support</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
@@ -81,6 +81,14 @@
                         </a>
                     <%} %>
                 </div>
+                <%if (status == 'LoggedIn'){ %>
+                    <div class="vertical-menu">
+                        <a href="/logout">Log out</a>
+                        <!-- <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                        <a href="#">Link 4</a> -->
+                    </div>
+                <%} %>
             </nav>
         </header>
 
