--- a/src/views/translate.ejs
+++ b/src/views/translate.ejs
@@ -17,7 +17,7 @@
         <div style="visibility: hidden;">Mục đích: đưa <body> trở về vị trí đầu trang</div>
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
+                <a href="/" class="nav__logo">
                     <img src="/img/infinity.png" class="nav__logo-img"> 
                     <span class="logo-header_text">infinity</span>
                 </a>
@@ -33,10 +33,10 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#new" class="nav__link">Docs</a>
+                            <a href="#docs" class="nav__link unused">Docs</a>
                         </li>
                         
-                        <a href="#support" class="nav__link">Support</a>
+                        <a href="#support" class="nav__link unused">Support</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
@@ -55,6 +55,7 @@
                         <div class="circle">
                             <img src="img/Animepic3.jpg" alt="Your Image">
                         </div>
+                        <div class="userid" style="display: none;"><%= user.ID %></div>
                     <%} else{%>
                         <a href="/login">
                             <div class="nav__login">
@@ -63,6 +64,14 @@
                         </a>
                     <%} %>
                 </div>
+                <%if (status == 'LoggedIn'){ %>
+                    <div class="vertical-menu">
+                        <a href="/logout">Log out</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                        <a href="#">Link 4</a>
+                    </div>
+                <%} %>
             </nav>
         </header>
         <main class="wrap_content">
@@ -90,8 +99,12 @@
                 <div id="product-list-container"></div>
             </div>
             <div class="sidebar sidebar2">
-                <h2 class="sidebar_title"><i class="ri-heart-fill header_icon" style="color: #4255FF"></i>
-                    Favorite</h2>
+                <div class="sidebar_header">
+                    <h2 class="sidebar_title"><i class="ri-heart-fill header_icon" style="color: #4255FF"></i>
+                        Favorite</h2>
+                        <i class="ri-close-line close_sidebar" style="color:rgb(94, 94, 94)"></i>
+                </div>
+
                 <div id="product-list-container-favor"></div>
             </div>
 
