--- a/src/public/css/translate.css
+++ b/src/public/css/translate.css
@@ -531,6 +531,7 @@ body{
   background-color: #ecebeb;
 }
 .text-input textarea{
+  opacity: 1 !important;
   height: 300px;
   width: 100%;
   border: none;
